2023-11-20  Niels Möller  <nisse@lysator.liu.se>

	* tune/speed.h (struct speed_params): Add size_ratio field.
	(SPEED_ROUTINE_MPN_MUL): If size_ratio > 0.0, use it to set size1.

	* tune/speed.c (FLAG_SR_OPTIONAL): New flag.
	(FLAG_RSIZE): Deleted unused flag.
	(routine): Add FLAG_SR_OPTIONAL to mpn_mul and mpn_mul_basecase.
	(run_one): Copy size_ratio field.
	(slash_r_string): New function, parse float ratio.
	(routine_find): Handle optional /r.
	(usage): Display help on /r option.

2023-09-05 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mpn/generic/toom{54,63,6h,8h}_mul.c, mpn/generic/toom_couple_handling.c,
	mpn/generic/toom_eval_{dgr3_pm1,dgr3_pm2,pm1,pm2,pm2exp,pm2rexp}.c:
	Use unsigned to handle sign for evaluated couples of value in Toom code.
	* gmp-impl.h: Update prototypes accordingly.

2023-08-27  Torbjörn Granlund  <tg@gmplib.org>

	* mpn/s390_64/z15/mul_2.asm: New file.
	* mpn/s390_64/z15/addmul_2.asm: New file.
	* mpn/s390_64/z13/bdiv_dbm1c.asm: New file.

	* mpn/s390_64/submul_1.asm: Properly initiate register used for carry.

	* mpn/s390_64/z14/hamdist.asm: Unroll.

2023-08-21  FX Coudert  <fxcoudert@gmail.com>
	    Marc Glisse  <marc.glisse@inria.fr>

	* configure.ac: Drop AC_HEADER_STDC and AC_HEADER_TIME.
	* configure.ac, tests/misc.c, tune/freq.c, tune/speed.c, tune/time.c:
	Unconditionally include time.h.

	* acinclude.m4: AC_PROG_LIBTOOL -> LT_INIT, AC_PROG_NM -> LT_PATH_NM
	* configure.ac: AC_PROG_LIBTOOL -> LT_INIT, AC_CHECK_LIBM -> LT_LIB_M,
	remove AC_TYPE_SIGNAL.
	* tests/misc.c, tests/spinner.c, tests/tests.h, tune/time.c:
	RETSIGTYPE -> void.

	* configure.ac: Remove redundant LT_INIT.
	Remove redundant backslash.
	Use AC_CONFIG_FILES.

	* acinclude.m4, configure.ac: AC_TRY_* -> AC_*_IFELSE.

	* configure.ac: Add AC_PROG_SED before testing NM.
	* acinclude.m4: Some main() -> main(void).

2023-08-20  Torbjörn Granlund  <tg@gmplib.org>

	* mpn/s390_64/z14/popcount.asm: Unroll.

2023-08-19  Marc Glisse  <marc.glisse@inria.fr>
